src/lsw-framework/src/apis/lsw-database-query-language/browsie-script.js
/*
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function(root) {
  "use strict";

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  peg$SyntaxError.buildMessage = function(expected, found) {
    var DESCRIBE_EXPECTATION_FNS = {
          literal: function(expectation) {
            return "\"" + literalEscape(expectation.text) + "\"";
          },

          "class": function(expectation) {
            var escapedParts = "",
                i;

            for (i = 0; i < expectation.parts.length; i++) {
              escapedParts += expectation.parts[i] instanceof Array
                ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                : classEscape(expectation.parts[i]);
            }

            return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
          },

          any: function(expectation) {
            return "any character";
          },

          end: function(expectation) {
            return "end of input";
          },

          other: function(expectation) {
            return expectation.description;
          }
        };

    function hex(ch) {
      return ch.charCodeAt(0).toString(16).toUpperCase();
    }

    function literalEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/"/g,  '\\"')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function classEscape(s) {
      return s
        .replace(/\\/g, '\\\\')
        .replace(/\]/g, '\\]')
        .replace(/\^/g, '\\^')
        .replace(/-/g,  '\\-')
        .replace(/\0/g, '\\0')
        .replace(/\t/g, '\\t')
        .replace(/\n/g, '\\n')
        .replace(/\r/g, '\\r')
        .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
        .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
    }

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      var descriptions = new Array(expected.length),
          i, j;

      for (i = 0; i < expected.length; i++) {
        descriptions[i] = describeExpectation(expected[i]);
      }

      descriptions.sort();

      if (descriptions.length > 0) {
        for (i = 1, j = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  };

  function peg$parse(input, options) {
    options = options !== void 0 ? options : {};

    var peg$FAILED = {},

        peg$startRuleFunctions = { Start: peg$parseStart },
        peg$startRuleFunction  = peg$parseStart,

        peg$c0 = function(sentence) { return sentence; },
        peg$c1 = function(value, appends) { return { $type:"value", value, appends } },
        peg$c2 = "#",
        peg$c3 = peg$literalExpectation("#", false),
        peg$c4 = function() { return { $type: "injected parameter", value: text() } },
        peg$c5 = "?",
        peg$c6 = peg$literalExpectation("?", false),
        peg$c7 = function(token1, table, filters, token2) { return { $action: "select", table, filters } },
        peg$c8 = "+",
        peg$c9 = peg$literalExpectation("+", false),
        peg$c10 = function(token1, table, token2, data) { return { $action: "insert", data } },
        peg$c11 = "=",
        peg$c12 = peg$literalExpectation("=", false),
        peg$c13 = function(token1, table, filters, token3, value) { return { $action: "update", table, filters, value } },
        peg$c14 = "-",
        peg$c15 = peg$literalExpectation("-", false),
        peg$c16 = function(token1, table, token2, filters) { return { $action: "delete", table, filters } },
        peg$c17 = ":",
        peg$c18 = peg$literalExpectation(":", false),
        peg$c19 = function(token1, filter) { return filter },
        peg$c20 = function(src, ops) { return { $type: "logical and/or operator", src, ops } },
        peg$c21 = function(op, dst) { return { op, dst } },
        peg$c22 = "!",
        peg$c23 = peg$literalExpectation("!", false),
        peg$c24 = function(negated, rule) { return negated ? { $type: "negation", negated, rule } : rule },
        peg$c25 = "(",
        peg$c26 = peg$literalExpectation("(", false),
        peg$c27 = ")",
        peg$c28 = peg$literalExpectation(")", false),
        peg$c29 = function(rule) { return { $type: "agroupation", rule } },
        peg$c30 = "and",
        peg$c31 = peg$literalExpectation("and", false),
        peg$c32 = "&",
        peg$c33 = peg$literalExpectation("&", false),
        peg$c34 = "or",
        peg$c35 = peg$literalExpectation("or", false),
        peg$c36 = "|",
        peg$c37 = peg$literalExpectation("|", false),
        peg$c38 = function(column, operation) { return [column, ...operation] },
        peg$c39 = function(op, ob) { return [op, ob] },
        peg$c40 = "is null",
        peg$c41 = peg$literalExpectation("is null", false),
        peg$c42 = "is not null",
        peg$c43 = peg$literalExpectation("is not null", false),
        peg$c44 = function() { return [text()]},
        peg$c45 = "<",
        peg$c46 = peg$literalExpectation("<", false),
        peg$c47 = "<=",
        peg$c48 = peg$literalExpectation("<=", false),
        peg$c49 = ">",
        peg$c50 = peg$literalExpectation(">", false),
        peg$c51 = ">=",
        peg$c52 = peg$literalExpectation(">=", false),
        peg$c53 = "!=",
        peg$c54 = peg$literalExpectation("!=", false),
        peg$c55 = "is in",
        peg$c56 = peg$literalExpectation("is in", false),
        peg$c57 = "is not in",
        peg$c58 = peg$literalExpectation("is not in", false),
        peg$c59 = function(token1, name, token2, parameters, token3) { return { $type: "filter appendment", name, parameters } },
        peg$c60 = ">>",
        peg$c61 = peg$literalExpectation(">>", false),
        peg$c62 = function(token1, name) { return { $type: "export appendment", name } },
        peg$c63 = ">>>",
        peg$c64 = peg$literalExpectation(">>>", false),
        peg$c65 = function(token1, name) { return { $type: "return appendment", name } },
        peg$c66 = "*",
        peg$c67 = peg$literalExpectation("*", false),
        peg$c68 = function(token1, name) { return { $type: "multiply appendment", name } },
        peg$c69 = function(first, others) { return [first].concat(others) },
        peg$c70 = ",",
        peg$c71 = peg$literalExpectation(",", false),
        peg$c72 = function(token1, param) { return param },
        peg$c73 = /^[0-9]/,
        peg$c74 = peg$classExpectation([["0", "9"]], false, false),
        peg$c75 = function() { return parseInt(text()) },
        peg$c76 = "{{",
        peg$c77 = peg$literalExpectation("{{", false),
        peg$c78 = "}}",
        peg$c79 = peg$literalExpectation("}}", false),
        peg$c80 = function(code) { return { $type: "js", code } },
        peg$c81 = peg$anyExpectation(),
        peg$c82 = function() { return text() },
        peg$c83 = function(tp, vl) { return tp ? { ...tp, $value: vl } : vl; },
        peg$c84 = /^[A-Za-z$_]/,
        peg$c85 = peg$classExpectation([["A", "Z"], ["a", "z"], "$", "_"], false, false),
        peg$c86 = /^[A-Za-z0-9$_]/,
        peg$c87 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "$", "_"], false, false),
        peg$c88 = ".",
        peg$c89 = peg$literalExpectation(".", false),
        peg$c90 = function(noun) { return noun },
        peg$c91 = "[",
        peg$c92 = peg$literalExpectation("[", false),
        peg$c93 = "]",
        peg$c94 = peg$literalExpectation("]", false),
        peg$c95 = function(first, others) { return { $type: "js-path", path: [first].concat(others || []) } },
        peg$c96 = "@",
        peg$c97 = peg$literalExpectation("@", false),
        peg$c98 = function(jspath) {
              return {
                $protocol: jspath,
              };
            },
        peg$c99 = "//",
        peg$c100 = peg$literalExpectation("//", false),
        peg$c101 = "/",
        peg$c102 = peg$literalExpectation("/", false),
        peg$c103 = function(protocol, host, path, query, fragment) {
              return {
                $protocol: protocol,
                $host: host,
                $path: path || "/",
                $query: query || null,
                $fragment: fragment || null
              };
            },
        peg$c104 = /^[A-Za-z]/,
        peg$c105 = peg$classExpectation([["A", "Z"], ["a", "z"]], false, false),
        peg$c106 = /^[A-Za-z0-9+\-.]/,
        peg$c107 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "+", "-", "."], false, false),
        peg$c108 = function(protocol) {
              return text().slice(0, -1); // Remueve el ":" del final
            },
        peg$c109 = /^[A-Za-z0-9\-._~%]/,
        peg$c110 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "-", ".", "_", "~", "%"], false, false),
        peg$c111 = function(host) {
              return host.join("");
            },
        peg$c112 = /^[A-Za-z0-9\-._~%!$&'()*+,;=:@\/]/,
        peg$c113 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "-", ".", "_", "~", "%", "!", "$", "&", "'", "(", ")", "*", "+", ",", ";", "=", ":", "@", "/"], false, false),
        peg$c114 = function(path) {
              return text().substr(1);
            },
        peg$c115 = function(params) {
              return params;
            },
        peg$c116 = function(head, tail) {
              return [head, ...tail.map(item => item[1])];
            },
        peg$c117 = function(key, value) {
              return { key: key.join(""), value: value.join("") };
            },
        peg$c118 = function(id) {
              return id.join("");
            },
        peg$c119 = "{",
        peg$c120 = peg$literalExpectation("{", false),
        peg$c121 = "}",
        peg$c122 = peg$literalExpectation("}", false),
        peg$c123 = function(members) {
              return members !== null ? members : {};
            },
        peg$c124 = function(head, tail) {
              const result = { [head.key]: head.value };
              tail.forEach((item) => {
                const subitem = item[3];
                const { key, value } = subitem;
                result[key] = value;
              });
              return result;
            },
        peg$c125 = function(key, value) {
              return { key, value };
            },
        peg$c126 = function(elements) {
              return elements !== null ? elements : [];
            },
        peg$c127 = function(head, tail) {
              return [head, ...tail.map(e => e[3])];
            },
        peg$c128 = "\"",
        peg$c129 = peg$literalExpectation("\"", false),
        peg$c130 = function(chars) {
              return chars;
            },
        peg$c131 = "\\\"",
        peg$c132 = peg$literalExpectation("\\\"", false),
        peg$c133 = function(chars) { return text(); },
        peg$c134 = /^[eE]/,
        peg$c135 = peg$classExpectation(["e", "E"], false, false),
        peg$c136 = /^[\-+]/,
        peg$c137 = peg$classExpectation(["-", "+"], false, false),
        peg$c138 = function(value) {
              return parseFloat(value);
            },
        peg$c139 = "true",
        peg$c140 = peg$literalExpectation("true", false),
        peg$c141 = function() { return true; },
        peg$c142 = "false",
        peg$c143 = peg$literalExpectation("false", false),
        peg$c144 = function() { return false; },
        peg$c145 = "null",
        peg$c146 = peg$literalExpectation("null", false),
        peg$c147 = function() { return null; },
        peg$c148 = peg$otherExpectation("whitespace"),
        peg$c149 = /^[ \t\n\r]/,
        peg$c150 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false),

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1 }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildStructuredError(
        [peg$otherExpectation(description)],
        input.substring(peg$savedPos, peg$currPos),
        location
      );
    }

    function error(message, location) {
      location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

      throw peg$buildSimpleError(message, location);
    }

    function peg$literalExpectation(text, ignoreCase) {
      return { type: "literal", text: text, ignoreCase: ignoreCase };
    }

    function peg$classExpectation(parts, inverted, ignoreCase) {
      return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
    }

    function peg$anyExpectation() {
      return { type: "any" };
    }

    function peg$endExpectation() {
      return { type: "end" };
    }

    function peg$otherExpectation(description) {
      return { type: "other", description: description };
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos], p;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column
        };

        while (p < pos) {
          if (input.charCodeAt(p) === 10) {
            details.line++;
            details.column = 1;
          } else {
            details.column++;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildSimpleError(message, location) {
      return new peg$SyntaxError(message, null, null, location);
    }

    function peg$buildStructuredError(expected, found, location) {
      return new peg$SyntaxError(
        peg$SyntaxError.buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseStart() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parseValue_appended();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c0(s1);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseValue_appended() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseJson_value();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parseValue_appendment();
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseValue_appendment();
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c1(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseValue_appendment() {
      var s0;

      s0 = peg$parseSubsentence_return();
      if (s0 === peg$FAILED) {
        s0 = peg$parseSubsentence_export();
        if (s0 === peg$FAILED) {
          s0 = peg$parseSubsentence_filter();
          if (s0 === peg$FAILED) {
            s0 = peg$parseSubsentence_multiply();
          }
        }
      }

      return s0;
    }

    function peg$parseInjected_parameter() {
      var s0, s1, s2;

      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 35) {
        s1 = peg$c2;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c3); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseJs_noun();
        if (s2 === peg$FAILED) {
          s2 = peg$parseInteger();
        }
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c4();
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseSelect_group() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseJs_noun();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseWhere_filters_precolons();
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$currPos;
            s5 = peg$parse_();
            if (s5 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 63) {
                s6 = peg$c5;
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c6); }
              }
              if (s6 !== peg$FAILED) {
                s5 = [s5, s6];
                s4 = s5;
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c7(s1, s2, s3, s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseInsert_group() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseJs_noun();
        if (s2 !== peg$FAILED) {
          s3 = peg$currPos;
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 43) {
              s5 = peg$c8;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c9); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 !== peg$FAILED) {
                s4 = [s4, s5, s6];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseValue_appended();
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c10(s1, s2, s3, s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseUpdate_group() {
      var s0, s1, s2, s3, s4, s5, s6, s7;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseJs_noun();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseWhere_filters_precolons();
          if (s3 === peg$FAILED) {
            s3 = null;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$currPos;
            s5 = peg$parse_();
            if (s5 !== peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 61) {
                s6 = peg$c11;
                peg$currPos++;
              } else {
                s6 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c12); }
              }
              if (s6 !== peg$FAILED) {
                s7 = peg$parse_();
                if (s7 !== peg$FAILED) {
                  s5 = [s5, s6, s7];
                  s4 = s5;
                } else {
                  peg$currPos = s4;
                  s4 = peg$FAILED;
                }
              } else {
                peg$currPos = s4;
                s4 = peg$FAILED;
              }
            } else {
              peg$currPos = s4;
              s4 = peg$FAILED;
            }
            if (s4 !== peg$FAILED) {
              s5 = peg$parseValue_appended();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c13(s1, s2, s3, s4, s5);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseDelete_group() {
      var s0, s1, s2, s3, s4, s5, s6;

      s0 = peg$currPos;
      s1 = peg$parse_();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseJs_noun();
        if (s2 !== peg$FAILED) {
          s3 = peg$currPos;
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 45) {
              s5 = peg$c14;
              peg$currPos++;
            } else {
              s5 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c15); }
            }
            if (s5 !== peg$FAILED) {
              s6 = peg$parse_();
              if (s6 !== peg$FAILED) {
                s4 = [s4, s5, s6];
                s3 = s4;
              } else {
                peg$currPos = s3;
                s3 = peg$FAILED;
              }
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
          if (s3 !== peg$FAILED) {
            s4 = peg$parseWhere_filters();
            if (s4 === peg$FAILED) {
              s4 = null;
            }
            if (s4 !== peg$FAILED) {
              peg$savedPos = s0;
              s1 = peg$c16(s1, s2, s3, s4);
              s0 = s1;
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseWhere_filters_precolons() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parse_();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 58) {
          s3 = peg$c17;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c18); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parse_();
          if (s4 !== peg$FAILED) {
            s2 = [s2, s3, s4];
            s1 = s2;
          } else {
            peg$currPos = s1;
            s1 = peg$FAILED;
          }
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseWhere_filters();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c19(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseWhere_filters() {
      var s0;

      s0 = peg$parseInteger();
      if (s0 === peg$FAILED) {
        s0 = peg$parseString();
        if (s0 === peg$FAILED) {
          s0 = peg$parseWhere_rule_4();
          if (s0 === peg$FAILED) {
            s0 = peg$parseJs_block();
            if (s0 === peg$FAILED) {
              s0 = peg$parseInjected_parameter();
            }
          }
        }
      }

      return s0;
    }

    function peg$parseWhere_rule_4() {
      var s0;

      s0 = peg$parseWhere_rule_3();
      if (s0 === peg$FAILED) {
        s0 = peg$parseWhere_rule_2();
      }

      return s0;
    }
